--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,6 +73,10 @@ html body {
 #nav-wrapper {
   background: var(--colorTertiaryDarken3);
   z-index: 3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
 #nav-footer-toggle {
@@ -907,7 +911,7 @@ ul li {
   font-family: 'Roboto Mono', monospace;
   font-size: 20px;
   display: block;
-  padding-left: 10px;
+  padding: 0px 10px;
 }
 
 #datetime {
@@ -968,6 +972,12 @@ input:focus {
   align-items: center;
   font-size: 20px;
   font-family: 'Roboto Mono', monospace;
+}
+
+#nav-mobile2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 #sensor-selected:hover,
